--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,11 +75,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: IranYekan
+      fonts:
+        - asset: assets/fonts/IRANYekanMobileRegular.ttf
+        - asset: assets/fonts/IRANYekanMobileLight.ttf
+        - asset: assets/fonts/IRANYekanMobileMedium.ttf
+        - asset: assets/fonts/IRANYekanMobileBold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
