--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     sdk: flutter
   intl: any
   adaptive_theme: ^3.4.1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
