--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: any
   adaptive_theme: ^3.4.1
   smooth_page_indicator: ^1.1.0
+  validators: ^3.0.0
 
 dev_dependencies:
   flutter_test:
