--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   adaptive_theme: ^3.4.1
   smooth_page_indicator: ^1.1.0
   validators: ^3.0.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
